--- a/src/Hjmos.BaseControls/Hjmos.BaseControls.csproj
+++ b/src/Hjmos.BaseControls/Hjmos.BaseControls.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Controls\Button\ButtonGroup.cs" />
     <Compile Include="Controls\Button\EditButton.cs" />
     <Compile Include="Controls\Button\ImageButton.cs" />
+    <Compile Include="Controls\Carousel\Carousel.cs" />
+    <Compile Include="Controls\Carousel\Carousel1.cs" />
+    <Compile Include="Controls\Base\SimpleItemsControl.cs" />
+    <Compile Include="Controls\Carousel\CarouselItem.cs" />
     <Compile Include="Controls\ColorPicker\ColorDropper.cs" />
     <Compile Include="Controls\ColorPicker\ColorPicker.cs" />
     <Compile Include="Controls\Growl\Growl.cs" />
@@ -112,6 +116,7 @@
     <Compile Include="Controls\Panel\CirclePanel.cs" />
     <Compile Include="Controls\Panel\Grid\Col.cs" />
     <Compile Include="Controls\Panel\Grid\Row.cs" />
+    <Compile Include="Controls\Panel\SlideSwitchPanel.cs" />
     <Compile Include="Controls\ProgressBar\InfoProgressBar.cs" />
     <Compile Include="Controls\SplashWindow\ISplashWindow.cs" />
     <Compile Include="Controls\SplashWindow\SplashWindow.cs" />
@@ -311,6 +316,10 @@
     <Page Include="Themes\Styles\Base\TreeViewBaseStyle.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\Styles\Carousel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Styles\ContentComboBox.xaml">
       <SubType>Designer</SubType>
