线路防汛设计

--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>UserControl4.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControltest.cs" />
+    <Compile Include="WinApiHelper.cs" />
     <Compile Include="Window1.xaml.cs">
       <DependentUpon>Window1.xaml</DependentUpon>
     </Compile>
