--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -41,9 +41,8 @@
     <Reference Include="DevExpress.Mvvm.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL">
       <Private>True</Private>
     </Reference>
-    <Reference Include="GongSolutions.Wpf.DragDrop, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\GongSolutions.Wpf.DragDrop.dll</HintPath>
+    <Reference Include="GongSolutions.Wpf.DragDrop">
+      <HintPath>..\GongSolutions.Wpf.DragDrop.dll</HintPath>
     </Reference>
     <Reference Include="Hjmos.UILib">
       <HintPath>..\..\..\..\..\..\A佳都工作资料\程序\HJMos_Client_Framework\Infrastructure\UIs\Hjmos.UILib\bin\Debug\Hjmos.UILib.dll</HintPath>
@@ -104,6 +103,12 @@
     </Compile>
     <Compile Include="UserControl4.xaml.cs">
       <DependentUpon>UserControl4.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl5.xaml.cs">
+      <DependentUpon>UserControl5.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControl6.xaml.cs">
+      <DependentUpon>UserControl6.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControltest.cs" />
     <Compile Include="WinApiHelper.cs" />
@@ -191,6 +196,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControl4.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControl5.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControl6.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -284,6 +297,7 @@
     <ProjectReference Include="..\..\src\Hjmos.BaseControls\Hjmos.BaseControls.csproj">
       <Project>{be79252b-7c0c-43a2-87a7-74901fb739ef}</Project>
       <Name>Hjmos.BaseControls</Name>
+      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\src\Hjmos.CommonControls\Hjmos.CommonControls.csproj">
       <Project>{20a16b94-760f-44e4-a68d-866dda2e6e57}</Project>
@@ -307,6 +321,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next">
+      <Version>4.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Ben.Demystifier">
       <Version>0.4.1</Version>
     </PackageReference>
@@ -315,6 +332,9 @@
     </PackageReference>
     <PackageReference Include="MediatR">
       <Version>9.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Portable.BouncyCastle">
+      <Version>1.9.0</Version>
     </PackageReference>
     <PackageReference Include="Prism.Core">
       <Version>8.1.97</Version>
