--- a/Tests/ConsoleApp2/ConsoleApp2.csproj
+++ b/Tests/ConsoleApp2/ConsoleApp2.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
