--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -327,8 +327,17 @@
     <PackageReference Include="CefSharp.Wpf">
       <Version>84.4.10</Version>
     </PackageReference>
+    <PackageReference Include="Exceptionless.NLog">
+      <Version>4.8.0</Version>
+    </PackageReference>
     <PackageReference Include="MediatR">
       <Version>9.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>5.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="NLog.Config">
+      <Version>4.7.15</Version>
     </PackageReference>
     <PackageReference Include="Portable.BouncyCastle">
       <Version>1.9.0</Version>
