--- a/Tests/WpfApp1/NLog.config
+++ b/Tests/WpfApp1/NLog.config
@@ -33,9 +33,9 @@
 	<!-- 输出规则 -->
 	<rules>
 		<logger name="file" minlevel="Debug" writeTo="info_file" />
-		<!--<logger name="*" level="Info" writeTo="info_file" />
+		<logger name="ss" level="Info" writeTo="info_file" />
 		<logger name="*" levels="Error" writeTo="info_file" />
-		<logger name="*" level="Fatal" writeTo="info_file" />-->
+		<logger name="*" level="Fatal" writeTo="info_file" />
 		<logger name="ff" minlevel="Debug" writeTo="Exceptionless" />
 		
 	</rules>
